--- a/.github/workflows/front-build.yaml
+++ b/.github/workflows/front-build.yaml
@@ -35,12 +35,14 @@ jobs:
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
-      
+      - name: install babel plugin
+        run: npm install --save-dev @babel/plugin-proposal-private-property-in-object
+
       - name: install npm dependencies
         run: npm install
         
       - name: react build
-        run: npm run build
+        run: CI=false npm run build
       
       # aws에 접근하기 위한 권한을 받아옵니다.
       - name: Configure AWS credentials
