--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@codemirror/commands": "^6.7.1",
+    "@codemirror/lang-markdown": "^6.3.0",
+    "@codemirror/state": "^6.4.1",
+    "@codemirror/view": "^6.34.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,6 +14,7 @@
     "@xeger/quill-image-formats": "^0.7.2",
     "axios": "^1.6.8",
     "highlight.js": "^11.10.0",
+    "marked": "^14.1.3",
     "quill": "^1.3.7",
     "quill-image-resize": "^3.0.9",
     "quill-image-resize-module": "^3.0.0",
